--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,10 +1,10 @@
 # Experience template
 - layout: left
-  company: Company name
-  link: Link to company (optional)
-  job_title: Job title
-  dates: Date Range (eg. November 2016 - present)
+  company: Regal Cinemas
+  link: https://www.regmovies.com/
+  job_title: Staff Members
+  dates: November 2019 - June 2020
   quote: >
-   Short description of the company (optional)
+   Regal Cinemas is one of the leading Cinemas company in the United States.
   description: | # this will include new lines to allow paragraphs
-    Description of role
+    In the role, I am required to operate the POS System and sell item to guests. Giving guest the best and joyful experience as possible.
