--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,7 @@
 # Education Template
 - layout: left
-  name: Institution name
-  dates: Date Range (eg. 2016 - 2019)
-  qualification: Qualifications (eg. BA Performing Arts)
+  name: University of Hawaii at Manoa
+  dates: 2018 - Now
+  qualification: BA Computer Science
   quote: >
-    Short institution or course description (optional)
   description: | # this will include new lines to allow paragraphs
-    Description of qualification
