--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,12 +1,11 @@
 # Project template
 - layout: top-middle
   name: Dice & Monster
-  link: https://github.com/yiwenc22/Dice-and-Monswer
+  link: <a href="https://www.youtube.com/watch?v=Nr1R9RVr3mc&t=0s">Gameplay on Youtube</a>
   github: yiwenc22/Dice-and-Monster
   quote: >
     A Project that is created by me and Chakhon for the class ICS 111, We draw, plan, and code this game.
   description: | # this will include new lines to allow paragraphs
-    Gameplay on Youtude:<a href="https://www.youtube.com/watch?v=Nr1R9RVr3mc&t=0s">Youtude</a>
     My role in this project is the artist and the programmer. I was responsible for 70 % of the monster design and
     coding and java class. For the code part, I was responsible for damage indicator, score counter, movement, the
     balance of hero or monster,and the dice. The part that takes most time was the dice and damage indicator. Damage
@@ -16,12 +15,11 @@
 
 - layout: top-middle
   name: Manoa Music Bubs
-  link: https://github.com/manoa-musicbubs
+  link: <a href="https://manoa-musicbubs.github.io/"><i class="large github icon"></i>Site Description</a>
   github: manoa-musicbubs/manoa-musicbuds-source
   quote: >
     A site created for the final project for ICS 314.
   description: | # this will include new lines to allow paragraphs
-    Site Description: <a href="https://manoa-musicbubs.github.io/"><i class="large github icon"></i>Info</a>
     My role in this project is the programmer and responsible for the profile page, sign up, in a page, and data base
     info. I have to develop a page for the user to change their info after account sign up. I came up with the default
     data base for the site, and keep data and form of the users email and password.
