--- a/_config.yml
+++ b/_config.yml
@@ -10,18 +10,18 @@ phone: (808)339-6861
 website: https://yiwenc22.github.io/
 
 # Dark Mode (true/false/never)
-darkmode: true
+darkmode: false
 
 # Social links
 twitter_username: Yiwenc22
 github_username:  yiwenc22
-linkedin_username: yiwenc22
+linkedin_username: yiwen-chen-93687819a
 
 # Additional icon links
 additional_links:
-- title: Link name
-  icon: Font Awesome brand icon name (eg. fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
-  url: Link url (eg. https://google.com)
+- title: TechHui
+  icon: fa-chalkboard
+  url: http://www.techhui.com/profile/yiwenChen
 # - title: another link
 #   icon: font awesome brand icon name (eg. fa-twitter) (https://fontawesome.com/icons?d=gallery&s=brands&m=free)
 #   url: Link url (eg. https://google.com)
@@ -34,15 +34,13 @@ additional_links:
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Directory of profile image (eg. images/profile.jpg)
+about_profile_image: images/Mypictureme.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
-
-  You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
-    - Lists
-    - Tables
-    - <a href="google.com">Links</a>
-    - Images
+  Engaged, creative student studying for a Bachelor Of Science degree in the Department of Information and Computer
+  Sciences at the University of Hawaii. I expect to graduate in Spring, 2022. Seeking to improve analytical skills,
+  corroborate skills, and coding skills. Inquisitive, energetic computer science specialist skilled in leadership,
+  with a strong foundation in math, logic, and cross-platform coding. Seeking to leverage solid skills in collaboration,
+  communication, and development as a programmer.
 
 # Projects Section
 # projects_title: Projects #(Use this to override about projects section title)
