--- a/_config.yml
+++ b/_config.yml
@@ -52,11 +52,14 @@ about_content: | # this will include new lines to allow paragraphs
 # education_title: Education #(Use this to override about education section title)
 
 # More Section
-# more_title: A Little More About Me #(Use this to override about more section title)
+# more_title: Skills #(Use this to override about more section title)
 more_content: | # this will include new lines to allow paragraphs
-  This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
-  Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
+  -Java, JavaScript, C, C++,
+  -Exceptionally skilled at JavaScript
+  -Skilled in Illustrator, Mongo-DB.
+  -Strong leadership, communication, and collaboration skills
+  -Skilled in critical thinking, logic, and basic math.
+  -Cantonese, Mandarin, Englsih
 
 # Footer
 footer_show_references: true
