--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,5 +6,5 @@
   quote: >
     GPA: 3.7
   description: | # this will include new lines to allow paragraphs
-    Favorite area of study: Relational Database Management Systems. \n
+    Favorite area of study: Relational Database Management Systems. <br>
     Favorite class: Agrioum
