--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,7 +4,7 @@
   dates: 2018 - Present
   qualification: B.S Computer Science
   quote: >
-    GPA: 3.7
+    ICS Course GPA: 3.77
   description: | # this will include new lines to allow paragraphs
     Favorite area of study: Relational Database Management Systems. <br>
-    Favorite class: Agrioum
+    Favorite class: Algorithms
