--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ phone: (808)339-6861
 website: https://yiwenc22.github.io/
 
 # Dark Mode (true/false/never)
-darkmode: never
+darkmode: true
 
 # Social links
 twitter_username: Yiwenc22
