--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -15,7 +15,7 @@
 
 - layout: top-middle
   name: Manoa Music Bubs
-  link: https://manoa-musicbubs.github.io/(Site Description)
+  link: https://manoa-musicbubs.github.io/
   github: manoa-musicbubs/manoa-musicbuds-source
   quote: >
     A site created for the final project for ICS 314.
